@@ -111,9 +111,11 @@ ZBX_THREAD_ENTRY(listener_thread, args)
 			zbx_sleep(1);
 	}
 
+#ifdef _WINDOWS
 	zabbix_log(LOG_LEVEL_INFORMATION, "zabbix_agentd listener stopped");
 
 	ZBX_DO_EXIT();
 
 	zbx_thread_exit(0);
+#endif
 }
